<resources>
    <string name="app_name">Find The Frog</string>


    <!-- Right from ShortWalk start -->

    <string name="enter_location_hint">Enter a location</string>
    <string name="enter_location_type_hint">Type of location ( Future Update )</string>
    <string name="home_current_location_hint">Home / Current</string>
    <string name="home_location">Home</string>
    <string name="current_location">Current</string>
    <string name="home_current_location_confirm">Confirm</string>
    <string name="home_current_location_search">Search</string>
    <string name="map_msg">Click on a location to find out the address. \n Longpress on a location to save a new walk, or complete a challenge!!!</string>
    <string name="number_of_weeks">Number of frogs in a row</string>
    <string name="longest_streak">Streak Length</string>
    <string name="lst_wlk_addr">Andrews\'s house, Far far away, Everland</string>
    <string name="nxt_wlk_addr">Richard\'s house, Far far away, Neverland</string>
    <string name="lst_wlk_title">Days been since last walk"</string>
    <string name="nxt_wlk_title">Days before next walk</string>
    <string name="user_locn">Your Location</string>
    <string name="user_home_locn">Home / Base</string>
    <string name="incomplete_locn">Frog unfound</string>
    <string name="complete_locn">Frog found</string>
    <string name="set_home_locn">Set your (Base) Home by longPressing a point on the map.</string>
    <string name="set_frog_locn">Set frogs by longPressing the location on the map.</string>

    <string name="slide_1_title">Welcome to FindTheFrog</string>
    <string name="slide_1_description">An easy way to get out of your comfort zone and experience the world around you</string>
    <string name="slide_2_title">Workaholic to Marveled</string>
    <string name="slide_2_description">Explore your vicinity and make it a habit to find new places.</string>
    <string name="slide_3_title">Uninspired to Enamoured</string>
    <string name="slide_3_description">All you have to do is select a location and get there in a week to earn walk-points to compete with yourself and the world.</string>
    <string name="slide_4_title">Sedentary to JourneyMen</string>
    <string name="slide_4_description">After a week your walk will get destroyed and you\'ll lose points. \n So be judicious when selecting a location.</string>
    <string name="slide_5_title">Enervate to Energise</string>
    <string name="slide_5_description">Select locations on the map. Swipe left to moniter your progress. Swipe right to see how others are doing.</string>

    <string name="loginSignup_btn_txt">New to FindTheFrog? Sign Up!!!</string>
    <string name="signup_btn_hint">Sign Up</string>
    <string name="login_btn_hint">Log In</string>
    <string name="password_et_hint">Password</string>
    <string name="email_et_hint">Email</string>
    <string name="username_et_hint">Username</string>

    <string name="username_tv_error">Username must me longer than 5 characters</string>
    <string name="email_tv_error">Invalid email.</string>
    <string name="passowrd_tv_error">Make sure your password is longer than 5 characters.</string>
    <string name="network_tv_error">Internet needed to login. Obviously!!</string>
    <string name="no_internet">No Internet</string>
    <string name="something_wrong">OOPS..Something Went Wrong.</string>
    <string name="add_new_frogs">Add new frogs by longPressing a point on the map. Be judicious though!! \n You cannot delete a location. Not finding the frog would cost you points. \n You have 7 days!!! </string>

    <string-array name="locationTypes">
        <item>Bars</item>
        <item>Restaurants</item>
        <item>Pubs</item>
        <item>Malls</item>
        <item>Cafes</item>
        <item>Zoos</item>
        <item>Hills</item>
        <item>Archeds</item>
        <item>Concerts</item>
    </string-array>
    <string name="alertLocationTypeTitle"> Select your fancied location </string>
    <string name="title_activity_maps">Map</string>

    <!-- Right from ShortWalk end -->

    <string name="ok">OK</string>
    <string name="text_location_permission">The app predominantly works on your location. The app won\'t work without it.å</string>
    <string name="title_location_permission">Allow location permissions.</string>


</resources>
