<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:src="@drawable/lightbulb256" />

    <TextView
        android:id="@+id/lbl_login_loginpage"
        style="@style/textview_style_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/tv_login_interneterror"
        style="@style/textviewerror_style_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_tv_error"
        android:textSize="@dimen/smallText"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_login_loginpage"
        style="@style/editText_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_et_hint" />

    <TextView
        android:id="@+id/tv_login_usernameerror"
        style="@style/textviewerror_style_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_tv_error"
        android:textSize="@dimen/smallText"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_password_loginpage"
        style="@style/editText_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_et_hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_login_passworderror"
        style="@style/textviewerror_style_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passowrd_tv_error"
        android:textSize="@dimen/smallText"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_login_loginpage"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_hint" />

</LinearLayout>