<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lb_mainmap_bounceback"
        style="@style/mainRectanglesWithoutPrimaryColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/map_msg"
        android:maxLines="1"
        android:elevation="35dp"
        android:visibility="gone"
        android:textColor="@color/secondaryTextColor" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapv_map_mapfrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        style="@style/mainRectangles"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="bottom"
        android:alpha="0.95"
        android:clipToPadding="false"
        android:elevation="30dp"
        android:orientation="vertical"
        android:padding="@dimen/largeMarginOrPadding"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/mediumMarginOrPadding"
            android:layout_marginRight="@dimen/mediumMarginOrPadding"
            android:layout_marginTop="@dimen/mediumMarginOrPadding"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/set_frog_locn"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/smallText" />

        <EditText
            android:id="@+id/et_map_address"
            style="@style/mainRectanglesWithoutElevation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/mediumMarginOrPadding"
            android:layout_weight="1"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:hint="@string/enter_location_hint"
            android:paddingLeft="@dimen/mediumMarginOrPadding"
            android:paddingRight="@dimen/mediumMarginOrPadding"
            android:textSize="@dimen/smallText" />

        <Button
            android:id="@+id/btn_map_shuffle"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/mediumMarginOrPadding"
            android:layout_marginRight="@dimen/mediumMarginOrPadding"
            android:layout_marginTop="@dimen/mediumMarginOrPadding"
            android:layout_weight="1"
            android:tag="@string/home_location"
            android:text="@string/home_current_location_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setHomeValue"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_gravity="bottom"
        android:alpha="0.9"
        android:background="@color/darkone"
        android:clipToPadding="false"
        android:elevation="35dp"
        android:orientation="vertical"
        android:padding="@dimen/largeMarginOrPadding">

        <TextView
            android:id="@+id/lbl_map_homeloc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/mediumMarginOrPadding"
            android:layout_weight="1"
            android:elevation="10dp"
            android:gravity="center"
            android:paddingLeft="@dimen/mediumMarginOrPadding"
            android:paddingRight="@dimen/mediumMarginOrPadding"
            android:text="@string/set_home_locn"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/smallText"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_map_homeloc"
            style="@style/mainRectanglesWithoutElevation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/mediumMarginOrPadding"
            android:layout_weight="1"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:hint="@string/enter_location_hint"
            android:paddingLeft="@dimen/mediumMarginOrPadding"
            android:paddingRight="@dimen/mediumMarginOrPadding"
            android:textSize="@dimen/smallText" />

        <Button
            android:id="@+id/btn_map_homeloc"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="@dimen/mediumMarginOrPadding"
            android:text="@string/home_current_location_search" />

    </LinearLayout>

    <com.gigamole.library.PulseView
        android:id="@+id/pv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@color/darktwoAccent"
        android:elevation="40dp"
        android:visibility="gone"
        app:pv_alpha="100"
        app:pv_color="@color/darktwo"
        app:pv_icon="@drawable/frog"
        app:pv_icon_height="100dp"
        app:pv_icon_width="100dp"
        app:pv_interpolator="@android:anim/linear_interpolator"
        app:pv_measure="height"
        app:pv_spawn_period="1000" />

    <RelativeLayout
        android:id="@+id/progBar_map_mapfrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darktwo"
        android:alpha="0.8"
        android:visibility="invisible"
        android:elevation="35dp">

        <ProgressBar
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>




</FrameLayout>